cluster/apps/blogs/ghost/routers/redirect-tgr-lilj.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-tgr-lilj
  namespace: blogs
spec:
  redirectRegex:
    regex: ^https://${TGR_DOMAIN}/(.*)
    replacement: https://${LILJ_DOMAIN}/$${1}
    # permanent: true
