cluster/apps/blogs/ghost/routers/admin-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ghost-admin
  namespace: blogs
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`tygr.${XYZ_DOMAIN}`) && PathPrefix(`/ghost`)
      services:
        - kind: Service
          name: ghost
          port: 2368
      middlewares:
        - name: networking-rate-limit@kubernetescrd
        - name: networking-secure-headers-tgr@kubernetescrd
    # - kind: Rule
    #   match: Host(`tygr.${XYZ_DOMAIN}`) && PathPrefix(`/ghost/api/`)
    #   services:
    #     - kind: Service
    #       name: ghost
    #       port: 2368
    #   middlewares:
    #     - name: networking-rate-limit@kubernetescrd
    #     - name: networking-secure-headers-tgr@kubernetescrd
  tls:
    secretName: "tls.${XYZ_DOMAIN/./-}"
