cluster/apps/blogs/ghost/routers/content-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ghost-content
  namespace: blogs
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`${LILJ_DOMAIN}`)
      priority: 100
      services:
        - kind: Service
          name: ghost
          port: 2368
      middlewares:
        - name: networking-chain-no-auth-tgr@kubernetescrd
    - kind: Rule
      match: Host(`www.${LILJ_DOMAIN}`)
      priority: 100
      services:
        - kind: Service
          name: ghost
          port: 2368
      middlewares:
        - name: networking-chain-no-auth-tgr@kubernetescrd
    - kind: Rule
      match: Host(`${TGR_DOMAIN}`)
      priority: 101
      services:
        - kind: Service
          name: ghost
          port: 2368
      middlewares:
        - name: blogs-redirect-tgr-lilj@kubernetescrd
        - name: networking-chain-no-auth@kubernetescrd

  tls:
    secretName: "tls.tyg3r-tgr"
